# bazel-playground

./: README.md
.github/workflows/: main.yml
javascript/: .eslintrc.js  BUILD.bazel  WORKSPACE.bazel  jest.bzl  package-lock.json  package.json
javascript/__tests__/: int_list.test.js  printer.test.js
javascript/src/: index.js  int_list.js  printer.js
ts_library/: .gitignore  BUILD.bazel  WORKSPACE.bazel  jest.bzl  jest.config.js  package-lock.json  package.json
ts_library/__tests__/: printer.test.ts
ts_library/src/: index.ts  int_list.ts
ts_project/: BUILD.bazel  README.md  package-lock.json  package.json
ts_project/src/: printer.ts
typescript/: BUILD.bazel  WORKSPACE.bazel  jest.bzl  package-lock.json  package.json  tsconfig.json
typescript_docker/: BUILD.bazel  Dockerfile  README.md  WORKSPACE  WORKSPACE.bazel  jest.bzl  package-lock.json  package.json  tsconfig.json
typescript_docker/__tests__/: int_list.test.ts
