# Add rules here to build your software
# See https://docs.bazel.build/versions/master/build-ref.html#BUILD_files

load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_test")
load(":jest.bzl", "jest_test")

# index.jsを実行してステータスコードが0かどうかチェックするだけ
nodejs_test(
  name = "index_test",
  entry_point = "src/index.js",
  data = [
    "@npm//lodash",
    "src/printer.js",
    "src/int_list.js",
  ],
)

jest_test(
  name = "jest_test",
  srcs = glob(["__tests__/*.js"]),
  jest_config = "jest.config.js",
  deps = glob(["src/*.js"])
)
