# Add rules here to build your software
# See https://docs.bazel.build/versions/master/build-ref.html#BUILD_files

load("@npm//@bazel/typescript:index.bzl", "ts_library")
load(":jest.bzl", "jest_test")

ts_library(
  name = "lib",
  srcs = glob(["src/**/*.ts"]),
  tsconfig = "tsconfig.json",
  deps = [
    "@npm//lodash",
    "@npm//@types/lodash",
  ],
)

ts_library(
  name = "test_lib",
  srcs = glob(["__tests__/**/*.ts"]),
  tsconfig = "tsconfig.json",
  deps = [
    ":lib",
    "@npm//lodash",
    "@npm//@types",
  ],
)

# トランスパイルされた.d.ts, .jsのうち.jsだけを取り出す
# output_groupはts_libraryの出力のうち、.jsだけを取り出すという意味になる
# ref: https://bazelbuild.github.io/rules_nodejs/TypeScript.html#accessing-javascript-outputs
# ref: https://github.com/bazelbuild/rules_typescript/blob/master/internal/common/compilation.bzl
filegroup(
    name = "lib_js",
    srcs = [":lib"],
    output_group = "es5_sources",
)
filegroup(
    name = "test_lib_js",
    srcs = [":test_lib"],
    output_group = "es5_sources",
)

jest_test(
  name = "jest_test",
  srcs = [":test_lib_js"],
  jest_config = "jest.config.js",
  deps = [":lib_js"],
)