# Add rules here to build your software
# See https://docs.bazel.build/versions/master/build-ref.html#BUILD_files

load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load(":jest.bzl", "jest_test")
load("@io_bazel_rules_docker//container:container.bzl", "container_bundle")

ts_project(
  name = "lib",
  srcs = glob(["src/**/*.ts"]),
  tsconfig = "tsconfig.json",
  deps = [
    "@npm//lodash",
    "@npm//@types/lodash",
  ],
  # declarationやsouce_mapなどはtsconfig.jsonと一致しない場合はエラーになるので必ず合わせる
  declaration = True,
  source_map = True,
)

jest_test(
  name = "jest_test",
  srcs = glob(["__tests__/**/*.test.ts"]),
  jest_config = "jest.config.js",
  deps = [
    ":lib",
    "@npm//ts-jest",
  ],
)

# container_image(
#     name = "base_image",
#     base = "@nodejs_image_base//image",
#     repository = "ts_bazel",
# )

nodejs_image(
  name = "nodejs_image",
  entry_point = ":src/index.ts",
  # base = ":base_image",
  # npm deps will be put into their own layer
  data = [
    ":lib",
    "@npm//lodash"
  ],
  stamp = True,
)

container_bundle(
  name = "bundle",
  images = {
    "ts_bazel:latest": ":nodejs_image",
    "ts_bazel:newst": ":nodejs_image",
  },
)

# 一応これで望みの状態にはなったが、TAGがnameで固定されてしまっているのでいまいち
# container_image(
#     name = "release_image",
#     base = ":nodejs_image",
#     repository = "ts_bazel",
#     stamp = True,
# )
