# Add rules here to build your software
# See https://docs.bazel.build/versions/master/build-ref.html#BUILD_files

load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load(":jest.bzl", "jest_test")
load("@io_bazel_rules_docker//container:container.bzl", "container_bundle", "container_image")
load("@io_bazel_rules_docker//docker/package_managers:download_pkgs.bzl", "download_pkgs")
load("@io_bazel_rules_docker//docker/package_managers:install_pkgs.bzl", "install_pkgs")

ts_project(
  name = "lib",
  srcs = glob(["src/**/*.ts"]),
  tsconfig = "tsconfig.json",
  deps = [
    "@npm//@types/lodash",
  ],
  # declarationやsouce_mapなどはtsconfig.jsonと一致しない場合はエラーになるので必ず合わせる
  declaration = True,
  source_map = True,
)

jest_test(
  name = "jest_test",
  srcs = glob(["__tests__/**/*.test.ts"]),
  jest_config = "jest.config.js",
  deps = [
    "src",
    "tsconfig.json",
    "@npm//@types/lodash",
    "@npm//lodash",
    "@npm//ts-jest",
  ],
)

#
# Build container
#

# apt-getするイメージレイヤー
download_pkgs(
  name = "pkgs",
  image_tar = "@nodejs_image_base//image",
  packages = ["curl"],
)
install_pkgs(
  name = "pkgs_image",
  image_tar = "@nodejs_image_base//image",
  installables_tar = ":pkgs.tar", # .tarを追加する必要がある
  output_image_name = "pkgs_image",
)

# ビルド後の.jsを追加するイメージレイヤー
nodejs_image(
  name = "nodejs_image",
  entry_point = ":src/index.ts",
  base = ":pkgs_image",
  # npm deps will be put into their own layer
  data = [
    ":lib",
    "@npm//lodash"
  ],
)

# create時間を正しくするためのstampを行うためだけにレイヤーを追加する
container_image(
    name = "release_image",
    base = ":nodejs_image",
    stamp = True,
)

# イメージ名とタグを付ける
container_bundle(
  name = "container",
  images = {
    "ts_bazel:latest": ":release_image",
    "ts_bazel:newst": ":release_image",
  },
)

